waltid-wallet-api/k8s/deployment-portal.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wallet-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-backend
  template:
    metadata:
      labels:
        app: wallet-backend
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: wallet-backend
          image: waltid/wallet-backend:portal-latest
          imagePullPolicy: Always
          volumeMounts:
            - name: wallet-db-config
              mountPath: "/waltid-wallet-api/config/db.conf"
              subPath: "db.conf"
              readOnly: true
            - name: wallet-datasource-config
              mountPath: "/waltid-wallet-api/config/db.sqlite.conf"
              subPath: "db.sqlite.conf"
              readOnly: true
            - name: wallet-wallet-config
              mountPath: "/waltid-wallet-api/config/wallet.conf"
              subPath: "wallet.conf"
              readOnly: true
            - name: wallet-web-config
              mountPath: "/waltid-wallet-api/config/web.conf"
              subPath: "web.conf"
              readOnly: true
            - name: wallet-marketplace-config
              mountPath: "/waltid-wallet-api/config/marketplace.conf"
              subPath: "marketplace.conf"
              readOnly: true
            - name: wallet-chainexplorer-config
              mountPath: "/waltid-wallet-api/config/chainexplorer.conf"
              subPath: "chainexplorer.conf"
              readOnly: true
            - name: wallet-push-config
              mountPath: "/waltid-wallet-api/config/push.conf"
              subPath: "push.conf"
              readOnly: true
            - name: wallet-nft-config
              mountPath: "/waltid-wallet-api/walt.yaml"
              subPath: "walt.yaml"
              readOnly: true
            - mountPath: "/waltid-wallet-api/data/"
              name: wallet-data
          ports:
            - containerPort: 4545
              name: http-api
      volumes:
        - name: wallet-db-config
          configMap:
            name: wallet-db-config
        - name: wallet-datasource-config
          configMap:
            name: wallet-datasource-config
        - name: wallet-wallet-config
          configMap:
            name: wallet-wallet-config
        - name: wallet-web-config
          configMap:
            name: wallet-web-config
        - name: wallet-marketplace-config
          configMap:
            name: wallet-marketplace-config
        - name: wallet-chainexplorer-config
          configMap:
            name: wallet-chainexplorer-config
        - name: wallet-push-config
          secret:
            secretName: wallet-push-config-secret
        - name: wallet-nft-config
          secret:
            secretName: wallet-nft-config-secret
        - name: wallet-data
          persistentVolumeClaim:
            claimName: wallet-data-volume-claim
---
kind: Service
apiVersion: v1
metadata:
  name: wallet-backend
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: wallet-backend
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: waltid-web-wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waltid-web-wallet
  template:
    metadata:
      labels:
        app: waltid-web-wallet
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: waltid-web-wallet
          image: waltid/waltid-web-wallet:portal-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http-api
---
kind: Service
apiVersion: v1
metadata:
  name: waltid-web-wallet
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: waltid-web-wallet
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - wallet.portal.walt.id
      secretName: wallet-tls-secret
  rules:
    - host: wallet.portal.walt.id
      http:
        paths:
          - path: /r/
            pathType: Prefix
            backend:
              service:
                name: wallet-backend
                port:
                  name: http
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: wallet-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: waltid-web-wallet
                port:
                  name: http
